name:                pandoc-lens
version:             0.6.3
x-revision:          1
synopsis:            Lenses for Pandoc documents
description:         Lenses for Pandoc documents.
homepage:            http://github.com/bgamari/pandoc-lens
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2014 Ben Gamari
category:            Text
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/bgamari/pandoc-lenses

library
  exposed-modules:     Text.Pandoc.Lens
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >=4.7 && <4.13,
                       containers >=0.5 && <0.7,
                       pandoc-types >=1.20 && <1.21,
                       lens >=4.2 && <4.20,
                       text
  default-language:    Haskell2010
