name:                pandoc-lens
version:             0.8.0
synopsis:            Lenses for Pandoc documents
description:         Lenses for Pandoc documents.
homepage:            http://github.com/bgamari/pandoc-lens
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2014 Ben Gamari
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  changelog.mkd
tested-with:         GHC==8.8.1, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2

source-repository head
  type:                git
  location:            git://github.com/bgamari/pandoc-lenses

library
  exposed-modules:     Text.Pandoc.Lens
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >=4.7 && <4.21,
                       containers >=0.5 && <0.8,
                       pandoc-types >=1.23 && <1.24,
                       lens >=4.2 && <5.4,
                       text
  default-language:    Haskell2010
